--- a/17thJuly2025.md
+++ b/17thJuly2025.md
@@ -1,9 +1,10 @@
 Solved Leetcode Problems:
 
 *Problem1*
+
 **https://leetcode.com/problems/department-highest-salary/description/**
 
-1.Problem Statement:
+1.Problem Statement:(Leetcode 184)
 Write a solution to find employees who have the highest salary in each of the departments.Return the result table in any order.
 
 Solution:
@@ -17,11 +18,31 @@ JOIN (
 ) AS dept_max ON e.departmentId = dept_max.departmentId AND e.salary = dept_max.max_salary;
 
 *Problem2*
+
 **https://leetcode.com/problems/employees-earning-more-than-their-managers/description/**
 
-Problem Statement:
+Problem Statement:(Leetcode 181)
 Write a solution to find the employees who earn more than their managers.Return the result table in any order.
 
 Solution:
 select e.name as Employee from Employee e inner join Employee m on e.managerId=m.id where e.salary>m.salary
+
+*Problem 3*
+
+**https://leetcode.com/problems/second-highest-salary/description/**
+
+Problem Statement:(Leetcode 176)
+Write a solution to find the second highest distinct salary from the Employee table. If there is no second highest salary, return null
+
+Solution:
+SELECT MAX(salary) as SecondHighestSalary from Employee where salary<(select max(salary) from Employee)
+
+*Problem 4*
+**https://leetcode.com/problems/combine-two-tables/description/**
+
+Problem Statement:(leetcode 175)
+Write a solution to report the first name, last name, city, and state of each person in the Person table. If the address of a personId is not present in the Address table, report null instead
+
+Solution:
+select Person.firstName,Person.lastName,Address.city,Address.state from Person left join Address on Person.personId=Address.personId 
 
