--- a/17thJuly2025.md
+++ b/17thJuly2025.md
@@ -1,12 +1,10 @@
-Solved Leetcode Problems:
+Solved Leetcode Problems
 
-*Problem1*
 
-**https://leetcode.com/problems/department-highest-salary/description/**
-
-1.Problem Statement:(Leetcode 184)
-Write a solution to find employees who have the highest salary in each of the departments.Return the result table in any order.
-
+Problem 1: Department Highest Salary
+Leetcode Problem #184
+Problem Statement:
+Write a solution to find employees who have the highest salary in each of the departments. Return the result table in any order.
 Solution:
 SELECT d.name AS Department, e.name AS Employee, e.salary AS Salary
 FROM Employee e
@@ -17,32 +15,34 @@ JOIN (
     GROUP BY departmentId
 ) AS dept_max ON e.departmentId = dept_max.departmentId AND e.salary = dept_max.max_salary;
 
-*Problem2*
 
-**https://leetcode.com/problems/employees-earning-more-than-their-managers/description/**
 
-Problem Statement:(Leetcode 181)
-Write a solution to find the employees who earn more than their managers.Return the result table in any order.
-
+Problem 2: Employees Earning More Than Their Managers
+Leetcode Problem #181
+Problem Statement:
+Write a solution to find the employees who earn more than their managers. Return the result table in any order.
 Solution:
-select e.name as Employee from Employee e inner join Employee m on e.managerId=m.id where e.salary>m.salary
+SELECT e.name AS Employee 
+FROM Employee e 
+INNER JOIN Employee m ON e.managerId = m.id 
+WHERE e.salary > m.salary;
 
-*Problem 3*
 
-**https://leetcode.com/problems/second-highest-salary/description/**
-
-Problem Statement:(Leetcode 176)
-Write a solution to find the second highest distinct salary from the Employee table. If there is no second highest salary, return null
-
+Problem 3: Second Highest Salary
+Leetcode Problem #176
+Problem Statement:
+Write a solution to find the second-highest distinct salary from the Employee table. If there is no second-highest salary, return NULL.
 Solution:
-SELECT MAX(salary) as SecondHighestSalary from Employee where salary<(select max(salary) from Employee)
+SELECT MAX(salary) AS SecondHighestSalary 
+FROM Employee 
+WHERE salary < (SELECT MAX(salary) FROM Employee);
 
-*Problem 4*
-**https://leetcode.com/problems/combine-two-tables/description/**
 
-Problem Statement:(leetcode 175)
-Write a solution to report the first name, last name, city, and state of each person in the Person table. If the address of a personId is not present in the Address table, report null instead
-
+Problem 4: Combine Two Tables
+Leetcode Problem #175
+Problem Statement:
+Write a solution to report the first name, last name, city, and state of each person in the Person table. If the address of a personId is not present in the Address table, report NULL instead.
 Solution:
-select Person.firstName,Person.lastName,Address.city,Address.state from Person left join Address on Person.personId=Address.personId 
-
+SELECT Person.firstName, Person.lastName, Address.city, Address.state 
+FROM Person 
+LEFT JOIN Address ON Person.personId = Address.personId;
