--- a/17thJuly2025.md
+++ b/17thJuly2025.md
@@ -1,7 +1,7 @@
 Solved Leetcode Problems
 
 
-Problem 1: Department Highest Salary
+**Problem 1: Department Highest Salary**
 Leetcode Problem #184
 Problem Statement:
 Write a solution to find employees who have the highest salary in each of the departments. Return the result table in any order.
@@ -17,7 +17,7 @@ JOIN (
 
 
 
-Problem 2: Employees Earning More Than Their Managers
+**Problem 2: Employees Earning More Than Their Managers**
 Leetcode Problem #181
 Problem Statement:
 Write a solution to find the employees who earn more than their managers. Return the result table in any order.
@@ -28,7 +28,7 @@ INNER JOIN Employee m ON e.managerId = m.id
 WHERE e.salary > m.salary;
 
 
-Problem 3: Second Highest Salary
+**Problem 3: Second Highest Salary**
 Leetcode Problem #176
 Problem Statement:
 Write a solution to find the second-highest distinct salary from the Employee table. If there is no second-highest salary, return NULL.
@@ -38,7 +38,7 @@ FROM Employee
 WHERE salary < (SELECT MAX(salary) FROM Employee);
 
 
-Problem 4: Combine Two Tables
+**Problem 4: Combine Two Tables**
 Leetcode Problem #175
 Problem Statement:
 Write a solution to report the first name, last name, city, and state of each person in the Person table. If the address of a personId is not present in the Address table, report NULL instead.
